fix: publish as public package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@codingame/esbuild-import-meta-url-plugin",
   "version": "0.0.0-semantic-release",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "Esbuild plugin allowing to use t he `new URL(..., import.meta.url)` syntax",
   "type": "module",
   "module": "dist/esbuildImportMetaUrlPlugin.js",
